--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "prisma": {
-    "schema": "./prisma/schema.prisma"
+    "schema": "./src/prisma/schema.prisma"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.12.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "postgresql": "^0.0.1",
     "psql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
