--- a/package.json
+++ b/package.json
@@ -26,15 +26,20 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.12.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "node": "^19.8.1",
+    "npm": "^9.6.3",
     "postgresql": "^0.0.1",
     "psql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "swagger-cli": "^4.0.4",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
+    "yamljs": "^0.3.0",
     "zsh": "^0.0.1"
   },
   "devDependencies": {
@@ -45,6 +50,8 @@
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
